<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:key="preferenceTitle">
        <Preference
            app:key="shizuku_permission"
            app:title="@string/title_shizuku_authorization_state" />
        <Preference
            app:key="shizuku_service"
            app:title="@string/title_shizuku_service_state" />
        <Preference
            app:key="av_shizuku"
            app:title="@string/title_installer_available_state" />
        <Preference
            app:icon="@drawable/ic_activate"
            app:key="activate_brevent"
            app:title="@string/activate_brevent" />
        <Preference
            app:icon="@drawable/ic_activate"
            app:key="activate_icebox"
            app:title="@string/activate_icebox" />
        <Preference
            app:icon="@drawable/ic_activate"
            app:key="activate_stopapp"
            app:title="@string/activate_stopapp" />
        <Preference
            app:icon="@drawable/ic_activate"
            app:key="activate_permissiondog"
            app:title="@string/activate_permissiondog" />

    </PreferenceCategory>

</PreferenceScreen>